// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saveProject action Dispatches a notification when fetch fails. 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "Saving project...",
    },
    "type": "projects/saving",
  },
  Object {
    "payload": Object {
      "error": "We couldn't save your data.",
    },
    "type": "projects/error",
  },
]
`;

exports[`saveProject action Dispatches project pre and post actions correctly 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "Saving project...",
    },
    "type": "projects/saving",
  },
  Object {
    "type": "projects/saved",
  },
]
`;

exports[`saveProject action Does not dispatch pre and post actions if disabled 1`] = `Array []`;
